expense type css upgrade

--- a/project/expenses/templates/expenses/includes/expenses_type_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_type_list.html
@@ -33,23 +33,7 @@
 
     .badge {
         font-weight: normal;
-    }
-
-    .panel-heading {
-        padding: 0;
-        border:0;
-    }
-
-    .panel-title>a, .panel-title>a:active{
-        display:block;
-        padding:15px;
-        color:#555;
-        font-size:16px;
-        font-weight:bold;
-        text-transform:uppercase;
-        letter-spacing:1px;
-        word-spacing:3px;
-        text-decoration:none;
+        padding: 0.25rem .25rem;
     }
 
     .panel-heading  a:before {
