--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <!-- target table -->
             <div class="col-lg-12">
-                <!-- consumsion chart -->
+                <!-- consumption chart -->
                 <div class="mb-3" id="chart_consumsion">{{ chart_consumsion }}</div>
 
                 <div class="row">
