--- a/project/expenses/templates/expenses/includes/expenses_type_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_type_list.html
@@ -3,7 +3,7 @@
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default mb-2">
         <div class="panel-heading" role="tab" data-url="{{ url_type_update }}">
-            <a role="button" class="list-group-item list-group-item-primary list-group-item-action" data-toggle="collapse" href="#_{{ item.id }}_"
+            <a role="button" class="list-group-item list-group-item-primary list-group-item-action pr-2" data-toggle="collapse" href="#_{{ item.id }}_"
                 aria-expanded="true" >
                 {{ item.title }}
                 {% if item.necessary %}<span class="badge badge-primary"><i class="far fa-star"></i></span>{% endif %}
