--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -42,6 +42,10 @@
     label {
         margin: 0;
     }
+    .custom-control.custom-checkbox {
+        padding: 0.5rem 0 0 0;
+        text-align: left;
+    }
 </style>
 {% include 'core/includes/modal_form_js.html' %}
 
