--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -22,7 +22,15 @@
         {% for field in form %}
         <div class="row align-items-center">
             <div class="col-sm-4">{{ field.label_tag }}</div>
-            <div class="col-sm-8">{{ field|as_crispy_field }}</div>
+            <div class="col-sm-8">
+            {% if field.html_name == 'total_sum' %}
+            <div class="row">
+                <div class="col-sm">{{ field|as_crispy_field }}</div>
+                <div class="col-sm-2" id="div_sum_prices"><button type="button" id="add_price" class="btn btn-sm btn-secondary" style="width: 100%;">Add</button></div>
+            </div>
+            {% else %}
+            {{ field|as_crispy_field }}
+            {% endif %}</div>
         </div>
         {% endfor %}
     </div>
