--- a/project/core/templates/core/includes/generic_delete_form.html
+++ b/project/core/templates/core/includes/generic_delete_form.html
@@ -1,13 +1,13 @@
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1" data-update-container="{{ update_container }}">
     {% csrf_token %}
     <div class="modal-header">
-        <h5 class="modal-title">Trynimo patvirtinimas</h5>
+        <h5 class="modal-title">{{ title }}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
-        <p>Ar tikrai nori išrinti : <strong>{{ object }}</strong>?</p>
+        <p class="py-0 my-4">Ar tikrai nori išrinti: <strong>{{ object }}</strong>?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-sm btn-danger" id="save_close">Delete</button>
