--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -15,7 +15,7 @@
             <th class="text-right">Spalis</th>
             <th class="text-right">Lapkritis</th>
             <th class="text-right">Gruodis</th>
-            {% if url_delete %}<th width="60rem"></th>{% endif %}
+            <th width="60rem"></th>
         </tr>
     </thead>
     <tbody>
@@ -36,13 +36,14 @@
             {% cell item.october %}
             {% cell item.november %}
             {% cell item.december %}
-            {% if url_delete %}<td>
+            <td>{% if url_delete %}
                 <button type="button" class="btn btn-sm btn-super-sm btn-danger js-delete" data-url="{% url url_delete item.id %}">Delete</button>
-            </td>{% endif %}
+            {% endif %}</td>
         </tr>{% endwith %}
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="{% if url_delete %}14{% else %}13{% endif %}" class="py-2"><b>{{ year|title }}</b> metais įrašų nėra.</td>
+            <td colspan="13" class="py-2"><b>{{ year|title }}</b> metais įrašų nėra.</td>
+            <td></td>
         </tr>
         {% endfor %}
     </tbody>
