--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -73,6 +73,10 @@
             <a class="nav-link {% if '/plans/' in request.path %}active{% endif %}"
               href="{% url 'plans:plans_index' %}">Planavimas</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if '/summary/' in request.path %}active{% endif %}"
+              href="{% url 'bookkeeping:summary' %}">Suvestinės</a>
+          </li>
         </ul>
 
         <div class="collapse navbar-collapse">
