--- a/project/bookkeeping/templates/bookkeeping/summary.html
+++ b/project/bookkeeping/templates/bookkeeping/summary.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
-{% load detailed_table %}
-{% block head %}{% endblock head %}
+
+{% block head %}
+<script src="https://code.highcharts.com/highcharts.src.js"></script>
+{% endblock head %}
 
 {% block content %}
 
 
 <div class="row mt-2">
     <div class="col-lg-12">
-        Summary
+        {% include 'bookkeeping/includes/chart_summary_drinks.html' %}
     </div>
 </div>
 
