--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_drinks.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_drinks.html
@@ -59,16 +59,17 @@
             area: {
                 fillOpacity: 0.5
             },
-            line: {
+            area: {
                 dataLabels: {
                     enabled: true,
                     format: '{point.y:.0f}'
                 },
-                enableMouseTracking: false
+                enableMouseTracking: false,
+                fillOpacity: 0.5,
             }
         },
         series: [
-            {'name': 'Vidutiniškai per dieną, ml', 'data': {{ drinks_data_ml|safe }}, 'type': 'line'},
+            {'name': 'Vidutiniškai per dieną, ml', 'data': {{ drinks_data_ml|safe }}, 'type': 'area'},
         ]
     });
 </script>
