incomes/expenses summary chart

--- a/project/bookkeeping/templates/bookkeeping/summary.html
+++ b/project/bookkeeping/templates/bookkeeping/summary.html
@@ -6,10 +6,15 @@
 
 {% block content %}
 
-
 <div class="row mt-2">
     <div class="col-lg-12">
         {% include 'bookkeeping/includes/chart_summary_drinks.html' %}
+    </div>
+</div>
+
+<div class="row mt-2">
+    <div class="col-lg-12">
+        {% include 'bookkeeping/includes/chart_summary_balance.html' %}
     </div>
 </div>
 
