--- a/project/bookkeeping/templates/bookkeeping/summary.html
+++ b/project/bookkeeping/templates/bookkeeping/summary.html
@@ -18,4 +18,10 @@
     </div>
 </div>
 
+<div class="row mt-2">
+    <div class="col-lg-12">
+        {% include 'bookkeeping/includes/chart_summary_salary.html' %}
+    </div>
+</div>
+
 {% endblock content %}
