--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -29,22 +29,34 @@
                 <div class="row">
                     <div id="tbl_std_av" class="col-lg-12">{{ tbl_std_av }}</div>
                 </div>
-
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslą</button>
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
     </div>
 
     <div class="col-lg-4">
-        <div class="mb-5" id="chart_quantity">{{ chart_quantity }}</div>
-        <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="100%"></div>
+        <div class="row">
+            <div class="col">
+                <div id="chart_quantity">{{ chart_quantity }}</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col text-right my-4 py-1">
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Gertynės</button>
+                <button type="button" class="btn btn-sm btn-info js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslas</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="100%"></div>
+            </div>
+        </div>
     </div>
 
     <div class="col-lg-2">
         <div id="ajax-content" class="dblclick">{{ drinks_list }}</div>
     </div>
-
 </div>
 
 {% include 'modal.html' %}
