--- a/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/spending_info.html
@@ -15,6 +15,11 @@
             <td class="{{ fact_incomes|compare:plan_incomes }}">{{ fact_incomes|floatformat:2 }}</td>
         </tr>
         <tr>
+            <td>Išlaidos</td>
+            <td>{{ plan_expenses|floatformat:2 }}</td>
+            <td class="{{ plan_expenses|compare:fact_expenses }}">{{ fact_expenses|floatformat:2 }}</td>
+        </tr>
+        <tr>
             <td>Pinigai dienai</td>
             <td>{{ plan_per_day|floatformat:2 }}</td>
             <td class="{{ plan_per_day|compare:fact_per_day }}">{{ fact_per_day|floatformat:2 }}</td>
