months buttons calculated width

--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -27,23 +27,28 @@
         {% with request.user.month as month %}
         {% for m in buttons %}
         {% with m|date:'n' as m_num %}
-        <a href="{% url 'core:set_month' m_num 'bookkeeping:month' %}" class="btn btn-sm mr-1 px-3 {% if month|slugify == m_num %}btn-primary{% else %}btn-secondary{% endif %}">{{ m|date:'F'|title }}</a>
+        <a href="{% url 'core:set_month' m_num 'bookkeeping:month' %}" class="btn btn-sm btn-month my-1 {% if month|slugify == m_num %}btn-primary{% else %}btn-secondary{% endif %}">{{ m|date:'F'|title }}</a>
         {% endwith %}{% endfor %}{% endwith %}
     </div>
     <div class="col pl-0 text-right">
         {% url 'expenses:expenses_new' as url_expenses_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_expenses_new }}"><i class="fas fa-plus"></i> Išlaidos</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create my-1" data-url="{{ url_expenses_new }}"><i class="fas fa-plus"></i> Išlaidos</button>
         {% url 'incomes:incomes_new' as url_incomes_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_incomes_new }}"><i class="fas fa-plus"></i> Pajamos</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create my-1" data-url="{{ url_incomes_new }}"><i class="fas fa-plus"></i> Pajamos</button>
         {% url 'savings:savings_new' as url_savings_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_savings_new }}"><i class="fas fa-plus"></i> Taupymas</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create my-1" data-url="{{ url_savings_new }}"><i class="fas fa-plus"></i> Taupymas</button>
         {% url 'transactions:transactions_new' as url_transactions_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_transactions_new }}"><i class="fas fa-plus"></i> Pervedimas</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create my-1" data-url="{{ url_transactions_new }}"><i class="fas fa-plus"></i> Pervedimas</button>
         {% url 'drinks:drinks_new' as url_drinks_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_drinks_new }}"><i class="fas fa-plus"></i> Gertynės</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create my-1" data-url="{{ url_drinks_new }}"><i class="fas fa-plus"></i> Gertynės</button>
         <button class="btn btn-sm btn-info ml-1" onclick="myFunction()">Rodyti kitą grafiką</button>
     </div>
 </div>
+<style>
+    .btn-month {
+        width: Calc((100% / 12) - 0.18rem);
+    }
+</style>
 <script>
     function myFunction() {
         var x = document.getElementById("chart_expenses");
