equal plans columns width

--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -2,20 +2,20 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th width="200rem">Pavadinimas</th>
-            <th class="text-right">Sausis</th>
-            <th class="text-right">Vasaris</th>
-            <th class="text-right">Kovas</th>
-            <th class="text-right">Balandis</th>
-            <th class="text-right">Gegužė</th>
-            <th class="text-right">Birželis</th>
-            <th class="text-right">Liepa</th>
-            <th class="text-right">Rugpjūtis</th>
-            <th class="text-right">Rugsėjis</th>
-            <th class="text-right">Spalis</th>
-            <th class="text-right">Lapkritis</th>
-            <th class="text-right">Gruodis</th>
-            <th width="60rem"></th>
+            <th width="12%">Pavadinimas</th>
+            <th width="7%" class="text-right">Sausis</th>
+            <th width="7%" class="text-right">Vasaris</th>
+            <th width="7%" class="text-right">Kovas</th>
+            <th width="7%" class="text-right">Balandis</th>
+            <th width="7%" class="text-right">Gegužė</th>
+            <th width="7%" class="text-right">Birželis</th>
+            <th width="7%" class="text-right">Liepa</th>
+            <th width="7%" class="text-right">Rugpjūtis</th>
+            <th width="7%" class="text-right">Rugsėjis</th>
+            <th width="7%" class="text-right">Spalis</th>
+            <th width="7%" class="text-right">Lapkritis</th>
+            <th width="7%" class="text-right">Gruodis</th>
+            <th width="4%"></th>
         </tr>
     </thead>
     <tbody>
