pensions list template with fee

--- a/project/pensions/templates/pensions/includes/pensions_list.html
+++ b/project/pensions/templates/pensions/includes/pensions_list.html
@@ -6,6 +6,7 @@
             <th>Pesijų fondas</th>
             <th>Pastaba</th>
             <th class="text-right">Suma</th>
+            <th class="text-right">Mokestis</th>
         </tr>
     </thead>
     <tbody>
@@ -15,11 +16,12 @@
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-left">{{ item.pension_type }}</td>
             <td class="text-left">{{ item.remark }}</td>
-            <td>{{ item.price|intcomma }}</td>
+            <td>{{ item.price|default_if_none:'-'|intcomma }}</td>
+            <td>{{ item.fee|default_if_none:'-'|intcomma }}</td>
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="4" class="py-2"><b>{{ request.user.profile.year|title }}</b> metais irašų nėra.</td>
+            <td colspan="5" class="py-2"><b>{{ request.user.profile.year|title }}</b> metais irašų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
