--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -19,15 +19,15 @@
                 <!-- consumption chart -->
                 <div class="mb-3" id="chart_consumsion">{{ chart_consumsion }}</div>
 
-                <div class="row">
-                    <div id="tbl_consumsion" class="col-lg-3 pr-0">{{ tbl_consumsion }}</div>
-                    <div id="tbl_last_day" class="col-lg-4 px-0 pl-2">{{ tbl_last_day }}</div>
-                    <div id="tbl_alcohol" class="col-lg-2 px-0 pl-2">{{ tbl_alcohol }}</div>
-                    <div id="drinks-target-content" class="col-lg-3 pl-2 dblclick">{{ target_list }}</div>
+                <div class="row px-3">
+                    <div id="tbl_consumsion" class="col-lg-3 px-1">{{ tbl_consumsion }}</div>
+                    <div id="tbl_last_day" class="col-lg-4 px-1">{{ tbl_last_day }}</div>
+                    <div id="tbl_alcohol" class="col-lg-2 px-1">{{ tbl_alcohol }}</div>
+                    <div id="drinks-target-content" class="col-lg-3 px-1 dblclick">{{ target_list }}</div>
                 </div>
 
-                <div class="row">
-                    <div id="tbl_std_av" class="col-lg-12">{{ tbl_std_av }}</div>
+                <div class="row px-3">
+                    <div id="tbl_std_av" class="col-lg-12 px-1">{{ tbl_std_av }}</div>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="row">
-            <div class="col text-right my-4 py-1">
+            <div class="col text-right my-4">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Gertynės</button>
                 <button type="button" class="btn btn-sm btn-info js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslas</button>
             </div>
