--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -7,11 +7,11 @@
 
 {% block content %}
 
-<div class="row my-2">
-    <div class="col-lg-8 pr-2 table-responsive" id="month_table">
+<div class="row my-2 px-2">
+    <div class="col-lg-8 px-m table-responsive" id="month_table">
         {{ month_table }}
     </div>
-    <div class="col pl-0">
+    <div class="col-lg-4 px-m">
         <div class="row">
             <div style="display: none;" id='chart_expenses' class="col">{{ chart_expenses }}</div>
             <div id='chart_targets' class="col">{{ chart_targets }}</div>
@@ -22,15 +22,15 @@
     </div>
 </div>
 
-<div class="row my-2">
-    <div class="col-lg-8 pr-2">
+<div class="row my-2 px-2">
+    <div class="col-lg-8 px-m">
         {% with request.user.month as month %}
         {% for m in buttons %}
         {% with m|date:'n' as m_num %}
         <a href="{% url 'core:set_month' m_num 'bookkeeping:month' %}" class="btn btn-sm btn-month my-1 {% if month|slugify == m_num %}btn-primary{% else %}btn-secondary{% endif %}">{{ m|date:'F'|title }}</a>
         {% endwith %}{% endfor %}{% endwith %}
     </div>
-    <div class="col pl-0 text-right">
+    <div class="col-lg-4 px-m text-right">
         {% url 'expenses:expenses_new' as url_expenses_new %}
         <button type="button" class="btn btn-sm btn-outline-success js-create my-1" data-url="{{ url_expenses_new }}"><i class="fas fa-plus"></i> Išlaidos</button>
         {% url 'incomes:incomes_new' as url_incomes_new %}
@@ -44,11 +44,17 @@
         <button class="btn btn-sm btn-info ml-1" onclick="myFunction()">Rodyti kitą grafiką</button>
     </div>
 </div>
+
 <style>
     .btn-month {
         width: Calc((100% / 12) - 0.18rem);
     }
+
+    .px-m {
+        padding: 0 .5rem;
+    }
 </style>
+
 <script>
     function myFunction() {
         var x = document.getElementById("chart_expenses");
